<resources>
    <string name="app_name">Native Firebase Task</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Your email address</string>
    <string name="prompt_password">Your password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="scopic">Scopic</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account_question">Have an Account?</string>
    <string name="welcome_message">Hi there! Nice to see you</string>
    <string name="list">List</string>
    <string name="back">Back</string>
    <string name="profile">Profile</string>
    <string name="add">Add</string>
    <string name="log_out">Log Out</string>
    <string name="content">Content</string>
    <string name="error_on_login_check_email_and_password">Error on login. Check your e-mail and password</string>
    <string name="logout_dialog_title">Logout</string>
    <string name="logout_dialog_message">Do you want to go back to Login screen?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error_on_register_check_email_and_password">Error on register. Check if mail is properly formatted, already in use or password is shorter than 6 characters</string>
    <string name="error_writing_on_the_database">Error writing on the database, try again later.</string>
</resources>